--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,6 +62,8 @@ services:
       KAFKA_GROUP: storesvc
       HTTP_ADDR: ":8081"
       WARMUP_LIMIT: "0"
+      CACHE_CAPACITY: "1000"
+      AUTO_MIGRATE: "true"
     ports:
       - "8081:8081"
 
